server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__approval_flow_snapshots@question_reply_events_codex.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
assertion_line: 1045
expression: normalize_events(&question_events)
---
- agent: codex
  kind: started
  seq: 1
  started:
    message: session.created
- agent: codex
  kind: started
  seq: 2
  started:
    message: thread/started
- agent: codex
  kind: started
  seq: 3
  started:
    message: turn/started
- agent: codex
  kind: message
  message:
    parts:
      - text: "<redacted>"
        type: text
    role: user
  seq: 4
- agent: codex
  kind: message
  message:
    parts:
      - text: "<redacted>"
        type: text
    role: assistant
  seq: 5
