server/packages/sandbox-agent/tests/snapshots/http_sse_snapshots__run_http_events_snapshot@http_events_codex.snap
---
source: server/packages/sandbox-agent/tests/http_sse_snapshots.rs
assertion_line: 697
expression: normalized
---
- agent: codex
  kind: started
  seq: 1
  started:
    message: session.created
- agent: codex
  kind: started
  seq: 2
  started:
    message: thread/started
- agent: codex
  kind: started
  seq: 3
  started:
    message: turn/started
- agent: codex
  kind: message
  message:
    parts:
      - text: "<redacted>"
        type: text
    role: user
  seq: 4
- agent: codex
  kind: message
  message:
    parts:
      - text: "<redacted>"
        type: text
    role: assistant
  seq: 5
